# types/index.ts
@@ -1,0 +1,7 @@
+export interface Person {
+  user_id: number;
+  age: number;
+  name: string;
+}
+
+export type PersonCreationParams = Pick<Person, 'age' | 'name'>;
